--- a/main.css
+++ b/main.css
@@ -1,82 +1,87 @@
-    body{
-        background-color: white;
-    }
-    
-    body.dark-mode{
-        background-color: #202020;
-    }
+/* Body Default Color */
+body{
+  background-color: white;
+}
 
-    body.dark-mode #whiteModeSwitch,
-    body.dark-mode #darkModeSwitch {
-        color: #202020!important;
-    }
-    
-    body.dark-mode .navlink{
-        color: white;
-    }
-    
-    body.dark-mode .navlink:hover,
-    body.dark-mode .navlink:focus,
-    body.dark-mode .navlink:active{
-        color: #202020;
-    }
+/* Body Dark Mode Color */
+body.dark-mode{
+  background-color: #202020;
+}
 
-    #whiteModeSwitch, /* Ini harusnya #whiteModeSwitch, bukan #whiteModeSwtich */
-    #darkModeSwitch {
-        transition: color 0.5s ease;
-    }
+/* Switch Icon Color When Dark Mode */
+body.dark-mode #whiteModeSwitch,
+body.dark-mode #darkModeSwitch {
+  color: #202020!important;
+}
 
-    body.dark-mode {
-        background-color: #202020;
-    }
+/* Navigation Link Color when Dark Mode */
+body.dark-mode .navlink{
+  color: white;
+}
 
-    .switchMode {
-        display: flex;
-    }
+/* Navigation Link Hover Color When Hover , Focus and Active */
+body.dark-mode .navlink:hover,
+body.dark-mode .navlink:focus,
+body.dark-mode .navlink:active{
+  color: #202020;
+}
 
-    .darkModeSwitch,
-    .whiteModeSwitch {
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-        font-size: 20px;
-    }
+/* Transition Animation For Icon Switch */
+#whiteModeSwitch,
+#darkModeSwitch {
+  transition: color 0.5s ease;
+}
 
-    .darkModeSwitch:hover,
-    .whiteModeSwitch:hover {
-        /* Anda bisa menambahkan gaya hover sesuai kebutuhan di sini */
-    }
+/* Switch Mode Style*/
+.switchMode {
+  display: flex;
+}
 
-    body.dark-mode .whiteModeSwitch,
-    body:not(.dark-mode) .darkModeSwitch {
-        display: none;
-    }
+/* Cursor And Animation Style For Swtich Icon */
+.darkModeSwitch,
+.whiteModeSwitch {
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  font-size: 20px;
+}
 
-    .navButtonGroup {
-        display: flex;
-        flex-direction: row;
-        column-gap: 20px;
-        justify-content: start;
-    }
+body.dark-mode .whiteModeSwitch,
+body:not(.dark-mode) .darkModeSwitch {
+  display: none;
+}
 
-    .mainButtons {
-        font-family: 'Candy Beans', Sans-Serif;
-        font-size: 20px;
-        line-height: normal;
-        color: #202020;
-        padding: 12px 35px;
-        border-radius: 8px;
-        background-color: #FEDF18;
-        border: 2px solid #202020;
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-        column-gap: 10px;
-        justify-content: center;
-        align-items: center;
-    }
+.navButtonGroup {
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
+  justify-content: start;
+}
 
-    /* Perbaikan pada bagian ini */
-    .mainButtons.mode {
-        padding: 12px 12px;
-    }
+.mainButtons {
+  font-family: 'Candy Beans', Sans-Serif;
+  font-size: 20px;
+  line-height: normal;
+  color: #202020;
+  padding: 12px 35px;
+  border-radius: 8px;
+  background-color: #FEDF18;
+  border: 2px solid #202020;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  column-gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainButtons.mode {
+  padding: 12px 12px;
+}
+
+/* Logo Style */
+img.imgLogo {
+  width: auto;
+  height: 46px;
+}
+
