--- a/main.css
+++ b/main.css
@@ -163,7 +163,7 @@ body.dark-mode .mainButtons:active {
 }
 
 .elementor-4452 .elementor-element.elementor-element-f40b226 {
-  width:0!important;
+  width:!important;
 }
 
 /* Burger CSS  */
