--- a/main.css
+++ b/main.css
@@ -257,4 +257,19 @@ body.dark-mode .btn-burguer::after{
   50% { transform: var(--distancia-negada) var(--rotacion-inicial);}
   0% { transform: var(--distancia-negada) var(--rotacion-final);}
 }
-/* Burger Css  */
+/* Burger CSS */
+
+/* Navigation auto line when scrolling */
+  .navigation{
+      position: relative;
+    z-index: 15;
+  transition: all 0.5s ease-in-out;
+  }
+
+.navigation.sticky{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 1px solid #333;
+}
+/* Navigation auto line when scrolling */
