--- a/main.css
+++ b/main.css
@@ -273,6 +273,12 @@ body.dark-mode .btn-burguer::after{
     border-bottom: 1px solid #202020;
   }
 
+  .sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  }
+
   body.dark-mode .navigation.sticky{
     border-bottom: 1px solid white;
   }
