--- a/main.css
+++ b/main.css
@@ -262,8 +262,9 @@ body.dark-mode .btn-burguer::after{
 /* Navigation auto line when scrolling */
   .navigation{
       position: relative;
-    z-index: 15;
-  transition: all 0.5s ease-in-out;
+      z-index: 15;
+      border-bottom: 1px solid transparent;
+      transition: all 0.5s ease-in-out;
   }
 
   .navigation.sticky{
@@ -275,13 +276,18 @@ body.dark-mode .btn-burguer::after{
 
   .stickyNav,
   .stickyNavMobile{
-    transition: border-bottom 0.3s ease-in-out;
+    transition: border-bottom 0.5s ease-in-out;
   }
 
   .sticky {
   position: fixed;
   top: 0;
   width: 100%;
+  }
+
+  body.dark-mode .navigation{
+    border-bottom : 1px solid transparent;
+    transition: all 0.5s ease-in-out;
   }
 
   body.dark-mode .navigation.sticky{
