--- a/main.css
+++ b/main.css
@@ -261,43 +261,52 @@ body.dark-mode .btn-burguer::after{
 /* Burger CSS */
 
 /* Navigation auto line when scrolling */
-  .navigation{
-      position: relative;
-      z-index: 15;
-      border-bottom: 1px solid transparent;
-      transition: all 0.5s ease-in-out;
-      background-color:white!important;
+  .navigation {
+    position: relative;
+    z-index: 15;
+    border-bottom: 1px solid transparent;
+    transition: all 0.5s ease-in-out;
+    background-color: white !important;
   }
 
-  body.dark-mode .navigation{
-    background-color:#202020!important;
+  body.dark-mode .navigation {
+    background-color: #202020 !important;
   }
 
-  .navigation.sticky{
+  .navigation.sticky {
     position: fixed;
     top: 0;
     width: 100%;
     border-bottom: 1px solid #202020;
+    animation: fadeInDown 0.5s ease-in-out;
   }
 
   .stickyNav,
-  .stickyNavMobile{
+  .stickyNavMobile {
     transition: border-bottom 0.5s ease-in-out;
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
 
-  .sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  }
+  .sticky {}
 
-  body.dark-mode .navigation{
-    border-bottom : 1px solid transparent;
+  body.dark-mode .navigation {
+    border-bottom: 1px solid transparent;
     transition: all 0.5s ease-in-out;
   }
 
-  body.dark-mode .navigation.sticky{
+  body.dark-mode .navigation.sticky {
     border-bottom: 1px solid white;
+  }
+
+  @keyframes fadeInDown {
+    from {
+      transform: translateY(-100%);
+    }
+    to {
+      transform: translateY(0);
+    }
   }
 /* Navigation auto line when scrolling */
 
