--- a/main.css
+++ b/main.css
@@ -343,3 +343,20 @@ a.mainButtons:hover {
   }
 /* Mini Gallery Style */
 
+
+
+/* Breakpoint tablet */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+  #accentPic{
+    display:none!important;
+  }
+
+}
+
+/* Breakpoint Mobile */
+@media only screen and (max-width: 479px) {
+  #accentPic{
+    display:none!important;
+  }
+
+}
