--- a/main.css
+++ b/main.css
@@ -275,9 +275,10 @@ body.dark-mode .btn-burguer::after{
     border-bottom: 1px solid #202020;
   }
 
-  #stickyNav,
-  #stickyNavMobile{
+  section#stickyNav,
+  section#stickyNavMobile{
     transition: border-bottom 0.5s ease-in-out;
+    position:fixed!important;
   }
 
   .sticky {
