--- a/main.css
+++ b/main.css
@@ -279,6 +279,7 @@ body.dark-mode .btn-burguer::after{
   section#stickyNavMobile{
     transition: border-bottom 0.5s ease-in-out;
     position:fixed!important;
+    width: 100%;
   }
 
   .sticky {
