--- a/main.css
+++ b/main.css
@@ -295,7 +295,7 @@ body.dark-mode .btn-burguer::after{
   }
 
   body.dark-mode .with-border{
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid white!important;
   }
 /* Navigation auto line when scrolling */
 
