--- a/main.css
+++ b/main.css
@@ -355,6 +355,7 @@ a.mainButtons:hover {
   text-decoration:none;
   color:#202020;
   font-size: 20px;
+  transition : all 0.5s ease-in-out;
 }
 
 .socialFooter:hover,
