--- a/main.css
+++ b/main.css
@@ -4,7 +4,13 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: transparent;
+    background-color: #202020;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #D9D9D9;
+    border-radius: 10px;
 }
 
 /* Body Default Color */
