--- a/main.css
+++ b/main.css
@@ -14,11 +14,11 @@
 }
 
 body.dark-mode ::-webkit-scrollbar-thumb {
-      background-color: white;
+  background-color: white!important;
 }
 
 body.dark-mode ::-webkit-scrollbar-track {
-  background-color: #3d3d3d;
+  background-color: #3d3d3d!important;
 }
 
 /* Body Default Color */
