--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
   --color2: #202020;
 }
 
+/* Light Mode */
 ::-webkit-scrollbar-thumb {
     background-color: #202020;
     border-radius: 10px;
@@ -13,12 +14,13 @@
     border-radius: 10px;
 }
 
+/* Dark Mode */
 body.dark-mode ::-webkit-scrollbar-thumb {
-  background-color: white!important;
+    background-color: white !important;
 }
 
 body.dark-mode ::-webkit-scrollbar-track {
-  background-color: #3d3d3d!important;
+    background-color: #3d3d3d !important;
 }
 
 /* Body Default Color */
